@@ -1,1 +1,1 @@
-VERSION = 0.4.1
+VERSION = 0.5.0
