@@ -6,8 +6,10 @@ MOC_DIR = ../build/moc
 DEPENDPATH += . include src
 INCLUDEPATH += . include
 include (../global.pri)
-CONFIG += qt staticlib debug
-DEFINES += drumstick_alsa_EXPORTS
+QT += dbus
+CONFIG += qt thread 
+DEFINES += drumstick_alsa_EXPORTS RTKIT_SUPPORT
+QMAKE_CXXFLAGS += $$QMAKE_CXXFLAGS_HIDESYMS
 # Input
 HEADERS += include/alsaclient.h \
            include/alsaevent.h \
@@ -16,6 +18,7 @@ HEADERS += include/alsaclient.h \
            include/alsatimer.h \
            include/drumstick.h \
            include/drumstickcommon.h \
+           include/macros.h \
            include/playthread.h \
            include/subscription.h
 SOURCES += src/alsaclient.cpp \
