@@ -6,10 +6,11 @@ MOC_DIR = ../build/moc
 DEPENDPATH += . include src
 INCLUDEPATH += . include
 include (../global.pri)
-CONFIG += qt staticlib debug
+CONFIG += qt
 DEFINES += drumstick_file_EXPORTS
+QMAKE_CXXFLAGS += $$QMAKE_CXXFLAGS_HIDESYMS
 # Input
-HEADERS += include/macros.h
+HEADERS += include/macros.h \
            include/qsmf.h \
            include/qwrk.h \
            include/qove.h
